Assert ModularUI layout headlessly, with no window and no GL (#125) (#131)
S2 of #19's Phase 0. A `ScrollWidget` over a `Column` of rows -- the planner's
tree panel in miniature -- now has its resolved `Area` boxes asserted in a plain
JUnit JVM, so a row that does not fit is a seconds-long test instead of a manual
launch of a 410-mod pack.

`HeadlessLayout` is the reusable harness: it opens a `ModularPanel` on a
`ModularScreen` and runs `onResize`, which is the same entry point
`GuiScreenWrapper.initGui` uses in game. It computes no geometry of its own --
every number the tests read back came out of `WidgetTree`/`StandardResizer`.

Three things the spike had to establish, all measured rather than reasoned:

- A pack jar is SRG-named while RFG's test classpath is MCP-named. Widgets that
  never touch Minecraft do not care, which is why a `Column` lays out either
  way, but `AbstractScrollWidget.beforeResize` asks the panel for a theme and
  dies on `ResourceLocation.func_110623_a`. `WidgetTree.resizeInternal` swallows
  every Throwable, so the symptom is a scroll subtree silently left at 0x0.
  `mod/build.gradle` now takes the test-only ModularUI through `rfg.deobf`.
- `ModularScreen` cannot be linked at all without `IAnimatedScreen` from
  NeverEnoughAnimations, a client-only mod absent from the server pack. An empty
  placeholder satisfies the verifier; the same call succeeds under
  `-Xverify:none`, which is what proves it is link-time only.
- `ScrollWidget` never sets its own content size -- `ListWidget` is what calls
  `setScrollSize`. A `ScrollWidget` over a `Column` lays out correctly and has a
  dead scrollbar, so Phase 3's tree panel wants `ListWidget`.

Also corrects what this work falsified: `mod/build.gradle`, `docs/BUILD.md` and
`skill/SKILL.md` all claimed a pack jar never needs deobfuscation, and
`docs/BUILD.md` still documented a `-Phei_jar`-only build that #128 made fail.

49 Java tests before, 60 after. Python suite unchanged at 1173.

Co-authored-b